2007-01-18  Kevin Decker  <kdecker@apple.com>

        Reviewed by John.

        <rdar://problem/4939511> WebKit should set the CG clip path for plug-ins that draw using CoreGraphics

        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView drawRect:]):  Set the CG clip path to the plug-in dirty rect. This allows plug-ins to obtain their
        dirty rect using functions like CGContextGetClipBoundingBox().

2007-01-17  Alice Liu  <alice.liu@apple.com>

        Reviewed by Harrison.

        Fix for <rdar://problem/4894155> REGRESSION: Extra line break is pasted with content into message body after choosing File - Paste

        Migration of some editing code from WebHTMView to WebCore::Editor
        resulted in not calling pasteboardTypesForSelection, which Mail was
        overriding for the special purpose of adding a type to the
        pasteboard after WebKit did.  This patch adds 2 separate code paths
        for Tiger and Leopard.  On Tiger we give in and call the WebView's
        pasteboardTypesForSelection.  On Leopard we call a delegate after
        the pasteboard types are set. 

        * DefaultDelegates/WebDefaultEditingDelegate.m:
        (-[WebDefaultEditingDelegate webView:didSetSelectionTypesForPasteboard:]):
        * WebCoreSupport/WebEditorClient.h:
        * WebCoreSupport/WebEditorClient.mm:
        (WebEditorClient::didSetSelectionTypesForPasteboard):
        (WebEditorClient::pasteboardTypesForSelection):
        * WebView/WebEditingDelegate.h:

2007-01-17  John Sullivan  <sullivan@apple.com>

        Reviewed by Darin

        - WebKit part of fix for <rdar://problem/4462420> REGRESSION: Mail hangs during 
          Replace All if the replacement string contains the search string

        * Misc/WebKitVersionChecks.h:
        Added extern "C" so this can be used from .mm files. I don't need this change anymore for
        this fix, but it's still worth fixing now so it doesn't bite anyone later.
