@@ -824,6 +824,15 @@ void WebFrameLoaderClient::restoreScrollPositionAndViewState()
 {
     HistoryItem* currentItem = core(m_webFrame.get())->loader()->currentHistoryItem();
     ASSERT(currentItem);
+
+    // FIXME: As the ASSERT attests, it seems we should always have a currentItem here.
+    // One counterexample is <rdar://problem/4917290>
+    // For now, to cover this issue in release builds, there is no technical harm to returning
+    // early and from a user standpoint - as in the above radar - the previous page load failed 
+    // so there *is* no scroll state to restore!
+    if (!currentItem)
+        return;
+    
     NSView <WebDocumentView> *docView = [m_webFrame->_private->webFrameView documentView];
     NSPoint point = currentItem->scrollPoint();
     if ([docView conformsToProtocol:@protocol(_WebDocumentViewState)]) {        
